added content into index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,70 @@
 	<link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
-	<h1><%= title %></h1>
-	<p>Welcome to <%= title %></p>
+
+<% include layout/nav.ejs %>
+
+<div class="container">
+	<div class="row">
+
+		<div class="col-md-6">
+			<div class="widget-announcement">
+				<h3>True Market Value<sup>&reg;</sup> <small class="pull-right">v0.2.0</small></h3>
+				<div class="media">
+					<div class="thumbnail pull-left">
+						<img class="media-object" src="/img/thumbnail-tmv.png" alt="True Market Value&reg;">
+					</div>
+					<div class="media-body">
+						<p>The Edmunds.com True Market Value<sup>&reg;</sup> (TMV<sup>&reg;</sup>) Widget gives automotive consumers the ability to find the Edmunds.com TMV<sup>&reg;</sup> price for a particular new or used vehicle without hassle. The price shown is for the base vehicle trim and doesn't account for any options or colors adjustments.</p>
+						<ul class="list-unstyled">
+							<li><a href="/tmv/configure"><span class="glyphicon glyphicon-cog"></span> Configure</a></li>
+							<li><a href="/tmv/about"><span class="glyphicon glyphicon-question-sign"></span> Quick Start</a></li>
+							<li><a href="/tmv/docs" target="_blank"><span class="glyphicon glyphicon-book"></span> API Documentation</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-6">
+			<div class="widget-announcement">
+				<h3>New Vehicle Configurator <small class="pull-right"></small></h3>
+				<div class="media">
+					<div class="thumbnail pull-left">
+						<img class="media-object" src="/img/thumbnail-nvc.png" alt="New Vehicle Configurator">
+					</div>
+					<div class="media-body">
+						<p>The New Vehicle Configurator Widget allows the consumer to configure a new vehicle, price it out and submit a quick quote to a local dealer(s).</p>
+						<ul class="list-unstyled">
+							<li><a href="/nvc/configure"><span class="glyphicon glyphicon-cog"></span> Configure</a></li>
+							<li><a href="/nvc/about"><span class="glyphicon glyphicon-question-sign"></span> Quick Start</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="clearfix"></div>
+
+		<div class="col-md-6">
+			<div class="widget-announcement">
+				<h3>Edmunds at a Glance <small class="pull-right"></small></h3>
+				<div class="media">
+					<div class="thumbnail pull-left">
+						<img class="media-object" src="/img/thumbnail-glance.png" alt="Edmunds at a Glance">
+					</div>
+					<div class="media-body">
+						<p>Tell the widget what car make/model/year you're interested in and it will tell you all that Edmunds.com knows about it including its car rating grade, consumer reviews, Edmunds.com Editorial review, Road Test articles, Price Promise® inventories, dealers selling it in the area, etc.</p>
+						<p><b>Stay tuned. Widget coming soon</b></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
+
+<% include layout/scripts.ejs %>
+
 </body>
 </html>
