--- a/less/app.less
+++ b/less/app.less
@@ -1,8 +1,5 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
+@import "../bower_components/bootstrap/less/bootstrap.less";
+@import "variables.less";
+@import "layout.less";
+@import "sidebar.less";
+@import "widget-announcement.less";
