added tmv configurator

--- a/less/app.less
+++ b/less/app.less
@@ -1,5 +1,9 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
 @import "variables.less";
+@import "button.less";
 @import "layout.less";
+@import "list-group-makes.less";
 @import "sidebar.less";
+@import "well-configurator.less";
 @import "widget-announcement.less";
+@import "widget-placeholder.less";
