--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,8 @@
 @icon-font-path: "/bootstrap/dist/fonts/";
 @navbar-inverse-bg: #444;
+@code-bg: #f3e4e8;
+/*
+@gray-lighter: lighten(#000, 86.5%); // #ddd
+
+@well-bg: @gray-lighter;
+*/
