--- a/less/layout.less
+++ b/less/layout.less
@@ -1,4 +1,5 @@
 body {
+  background: #f2f2f2;
   padding-top: 70px;
 }
 
@@ -8,4 +9,10 @@ body {
 
 .docs-section {
   padding-top: 50px;
+}
+
+.form-control-text {
+  background: transparent;
+  border: 0;
+  box-shadow: none;
 }
