styles for portal page

--- a/less/layout.less
+++ b/less/layout.less
@@ -3,6 +3,13 @@ body {
   padding-top: 70px;
 }
 
+.portal-page {
+  padding-top: 5px;
+  .navbar-fixed-top {
+    display: none;
+  }
+}
+
 .page-header {
   margin-top: 0;
 }
