--- a/views/tmv/configure/scripts.ejs
+++ b/views/tmv/configure/scripts.ejs
@@ -1,11 +1,10 @@
-<script src="/underscore/underscore.js"></script>
-<script src="/backbone/backbone.js"></script>
+<script src="/libs/underscore/underscore.js"></script>
+<script src="/libs/backbone/backbone.js"></script>
 
-<script src="/jquery-ui/ui/jquery.ui.core.js"></script>
-<script src="/jquery-ui/ui/jquery.ui.widget.js"></script>
-<script src="/jquery-ui/ui/jquery.ui.mouse.js"></script>
-<script src="/jquery-ui/ui/jquery.ui.slider.js"></script>
-
+<script src="/libs/jquery-ui/ui/jquery.ui.core.js"></script>
+<script src="/libs/jquery-ui/ui/jquery.ui.widget.js"></script>
+<script src="/libs/jquery-ui/ui/jquery.ui.mouse.js"></script>
+<script src="/libs/jquery-ui/ui/jquery.ui.slider.js"></script>
 
 <script src="/js/plugins/edm-plugins.js"></script>
 <script src="/js/edmunds-sdk.min.js"></script>
