--- a/views/layout/scripts.ejs
+++ b/views/layout/scripts.ejs
@@ -1,5 +1,5 @@
-<script src="/jquery/jquery.js"></script>
-<script src="/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/libs/jquery/jquery.js"></script>
+<script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
 
 <script>
 $(function() {
