added debug parameter to the links

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,7 +9,7 @@
 <% include layout/nav.ejs %>
 
 <div class="container">
-	<h1 class="page-header">Page you’re looking for cannot be found.</h1>
+	<h1 class="page-header">Page you're looking for cannot be found.</h1>
 	<p>Please make sure you entered the URL properly.</p>
 </div>
 
