--- a/views/nvc/configure.ejs
+++ b/views/nvc/configure.ejs
@@ -13,7 +13,7 @@
 	<div class="row">
 
 		<div class="col-sm-5 col-md-4">
-			<% include configure/configurator.ejs %>
+			<% include ../components/configurator/nvc.ejs %>
 		</div>
 
 		<div class="col-sm-7 col-md-8">
