--- a/views/tmv/configure.ejs
+++ b/views/tmv/configure.ejs
@@ -15,7 +15,7 @@
 	<div class="row">
 
 		<div class="col-sm-5 col-md-4">
-			<% include configure/configurator.ejs %>
+			<% include ../components/configurator/tmv.ejs %>
 		</div>
 
 		<div class="col-sm-7 col-md-8">
