--- a/views/layout/scripts.ejs
+++ b/views/layout/scripts.ejs
@@ -1,4 +1,4 @@
-<script src="/libs/jquery/jquery.js"></script>
+<script src="/libs/jquery/dist/jquery.js"></script>
 <script src="/libs/bootstrap/dist/js/bootstrap.js"></script>
 
 <script>
