preload default theme

--- a/views/tmv/configure.ejs
+++ b/views/tmv/configure.ejs
@@ -4,6 +4,7 @@
 	<title><%= title %></title>
 	<link rel="stylesheet" href="/css/app.css">
 	<link rel="stylesheet" href="/libs/jquery-ui/themes/smoothness/jquery-ui.min.css">
+	<link rel="stylesheet" href="/tmv/css/simple-light.css" id="primary_styles">
 </head>
 <body<% if (portal === true) { %> class="portal-page"<% } %>>
 
