--- a/views/components/configurator/section/zip-code.ejs
+++ b/views/components/configurator/section/zip-code.ejs
@@ -5,7 +5,7 @@
 	</label>
 	<div class="input-group-control" id="zip-code-control">
 		<div class="input-group input-group-sm" data-section="apply">
-			<input type="text" class="form-control" name="zipCode" value="" maxlength="5">
+			<input type="text" class="form-control" value="" maxlength="5">
 			<span class="input-group-btn">
 				<button class="btn btn-default" type="button">Apply</button>
 			</span>
