Refactored tabs to display functionality.

--- a/views/components/configurator/section/tabs-to-display.ejs
+++ b/views/components/configurator/section/tabs-to-display.ejs
@@ -12,7 +12,7 @@
     <div class="input-group input-group-sm" id="tab1_name">
         <input type="text" class="form-control" name="tab1Name" value="Configure">
 		<span class="input-group-btn">
-			<button class="btn btn-default apply-tab-name" type="button">Apply</button>
+			<button class="btn btn-default" data-action="applyTabName" type="button">Apply</button>
 		</span>
     </div>
 </div>
@@ -22,7 +22,7 @@
     <div class="input-group input-group-sm" id="tab2_name">
         <input type="text" class="form-control" name="tab2Name" value="TMV&reg;">
 		<span class="input-group-btn">
-			<button class="btn btn-default apply-tab-name" type="button">Apply</button>
+			<button class="btn btn-default" data-action="applyTabName" type="button">Apply</button>
 		</span>
     </div>
 </div>
@@ -32,7 +32,7 @@
     <div class="input-group input-group-sm" id="tab3_name">
         <input type="text" class="form-control" name="tab3Name" value="Price Quotes">
 		<span class="input-group-btn">
-			<button class="btn btn-default apply-tab-name" type="button">Apply</button>
+			<button class="btn btn-default" data-action="applyTabName" type="button">Apply</button>
 		</span>
     </div>
 </div>
