--- a/edmunds/widgets/glance/prototype/less/base.less
+++ b/edmunds/widgets/glance/prototype/less/base.less
@@ -1,4 +1,4 @@
-@import "../../bower_components/bootstrap/less/bootstrap";
+@import "../../../../../bower_components/bootstrap/less/bootstrap";
 @import "modules/variables";
 @import "modules/mixins";
 @import "partials/letter-grades";
