Fixed URLs to the base.less file.

--- a/edmunds/widgets/glance/prototype/less/base.less
+++ b/edmunds/widgets/glance/prototype/less/base.less
@@ -1,14 +1,14 @@
 //@import "/libs/bootstrap/less/bootstrap";
-@import "modules/variables";
-@import "modules/mixins";
-@import "partials/letter-grades";
-@import "partials/rating-selectors";
-@import "header";
-@import "content";
-@import "footer";
+//@import "modules/variables";
+//@import "modules/mixins";
+//@import "partials/letter-grades";
+//@import "partials/rating-selectors";
+//@import "header";
+//@import "content";
+//@import "footer";
 
 // Rating bar
-@import "rating-bar";
+//@import "rating-bar";
 
 .bold{
   font-weight: bold;
