Fixed URLs to the img folder

--- a/edmunds/widgets/glance/prototype/base.css
+++ b/edmunds/widgets/glance/prototype/base.css
@@ -5913,7 +5913,7 @@ header h1 {
 .nav > li > a {
   height: 26px;
   padding: 0 3px;
-  background: url(../img/tab_button_center.png) repeat-x;
+  background: url(img/tab_button_center.png) repeat-x;
   font: 11px/26px Arial, Helvetica, sans-serif;
   color: #444;
   -webkit-border-radius: 0;
@@ -5921,7 +5921,7 @@ header h1 {
   border-radius: 0;
 }
 .nav > li > a:hover {
-  background: url(../img/tab_button_center_hover.png) repeat-x;
+  background: url(img/tab_button_center_hover.png) repeat-x;
   color: #fff;
 }
 .nav > li > a:focus {
@@ -5932,7 +5932,7 @@ header h1 {
   position: absolute;
   height: 26px;
   width: 6px;
-  background: url(../img/tab_button_left.png) no-repeat;
+  background: url(img/tab_button_left.png) no-repeat;
   top: 0;
   left: -6px;
 }
@@ -5941,16 +5941,16 @@ header h1 {
   position: absolute;
   height: 26px;
   width: 17px;
-  background: url(../img/tab_button_right.png) no-repeat;
+  background: url(img/tab_button_right.png) no-repeat;
   top: 0;
   right: -17px;
   z-index: 2;
 }
 .nav > li > a:hover:before {
-  background: url(../img/tab_button_left_hover.png) no-repeat;
+  background: url(img/tab_button_left_hover.png) no-repeat;
 }
 .nav > li > a:hover:after {
-  background: url(../img/tab_button_right_hover.png) no-repeat;
+  background: url(img/tab_button_right_hover.png) no-repeat;
 }
 .nav .open > a,
 .nav .open > a:hover,
@@ -5958,16 +5958,16 @@ header h1 {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  background: url(../img/tab_button_center_hover.png) repeat-x;
+  background: url(img/tab_button_center_hover.png) repeat-x;
   color: #fff;
 }
 .nav .open > a:before,
 .nav-pills > li.active > a:before {
-  background: url(../img/tab_button_left_hover.png) no-repeat;
+  background: url(img/tab_button_left_hover.png) no-repeat;
 }
 .nav .open > a:after,
 .nav-pills > li.active > a:after {
-  background: url(../img/tab_button_right_hover.png) no-repeat;
+  background: url(img/tab_button_right_hover.png) no-repeat;
 }
 /*
 .widget{
@@ -5992,14 +5992,14 @@ header h1 {
     .clearfix();
     float: left;
     .active{
-      background: url(../img/tab_button_center_hover.png) repeat-x;
+      background: url(img/tab_button_center_hover.png) repeat-x;
       cursor: pointer;
       color: #fff;
       &:before{
-        background: url(../img/tab_button_left_hover.png) no-repeat;
+        background: url(img/tab_button_left_hover.png) no-repeat;
       }
       &:after{
-        background: url(../img/tab_button_right_hover.png) no-repeat;
+        background: url(img/tab_button_right_hover.png) no-repeat;
       }
     }
     div{
@@ -6008,11 +6008,11 @@ header h1 {
       margin-left: 12px;
       float: right;
       position: relative;
-      background: url(../img/tab_button_center.png) repeat-x;
+      background: url(img/tab_button_center.png) repeat-x;
       font: 11px/26px Arial, Helvetica, sans-serif;
       color: #444;
       &:hover{
-        background: url(../img/tab_button_center_hover.png) repeat-x;
+        background: url(img/tab_button_center_hover.png) repeat-x;
         cursor: pointer;
         color: #fff;
       }
@@ -6021,28 +6021,28 @@ header h1 {
         position: absolute;
         height: 26px;
         width: 6px;
-        background: url(../img/tab_button_left.png) no-repeat;
+        background: url(img/tab_button_left.png) no-repeat;
         top: 0;
         left: -6px;
       }
       &:hover:before{
-        background: url(../img/tab_button_left_hover.png) no-repeat;
+        background: url(img/tab_button_left_hover.png) no-repeat;
       }
       &:after{
         content: "";
         position: absolute;
         height: 26px;
         width: 17px;
-        background: url(../img/tab_button_right.png) no-repeat;
+        background: url(img/tab_button_right.png) no-repeat;
         top: 0;
         right: -17px;
       }
       &:hover:after{
-        background: url(../img/tab_button_right_hover.png) no-repeat;
+        background: url(img/tab_button_right_hover.png) no-repeat;
       }
     }
     .arrow-down{
-      background: url(../img/arrow-down.png) no-repeat;
+      background: url(img/arrow-down.png) no-repeat;
       width: 9px;
       height: 7px;
       display: inline-block;
@@ -6068,7 +6068,7 @@ footer .logo {
   text-align: right;
 }
 footer .logo a {
-  background: url(../img/logo.png) no-repeat;
+  background: url(img/logo.png) no-repeat;
   width: 65px;
   height: 19px;
   margin: 10px 0 0 5px;
@@ -6087,7 +6087,7 @@ footer .logo a {
   margin-right: 85px;
 }
 .rating-bar .rating .edmunds-grade-separator {
-  background: url(../img/edmunds_rating.png) no-repeat;
+  background: url(img/edmunds_rating.png) no-repeat;
   width: 153px;
   height: 20px;
   float: left;
